feat: get chat from user

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
 <input id="message" type="text"></input>
 <button id="send"> Send </button>
 <div id='contacts'> </div>
+<input id="chatName"> </input>
+<button id="fetchChatBtn"> Fetch chats </button>
+<div id='chatMessages'> </div>
 <button id="logout"> Logout </button>
 </body>
 
